--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "isomorphic-style-loader": "^1.1.0",
     "react-youtube": "^7.3.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
